test/binCases/config-type/invalid-array/entry-a.js
module.exports = "entry-a.js";
